syntax = "proto2";

package MMPro.micromsg;


message SnsObjectOpDeleteComment {
	required int32 _CommentId = 1;
}
